added ProgressBar to Dashboard
git-svn-id: svn+ssh://sshgw-bs.informatik.uni-tuebingen.de/abi-projects/QBiC/PortalDevelopment/svn/trunk@18 a0440ff8-2b04-4d88-a457-8e570ff6c9eb

--- a/DashboardPortlet/WebContent/WEB-INF/liferay-plugin-package.properties
+++ b/DashboardPortlet/WebContent/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,9 @@
-name=Vaadindashboardtest Application portlet
-short-description=VaadinDashboardTest
+name=VaadinDashboardTest
 module-group-id=Vaadin
 module-incremental-version=1
+short-description=VaadinDashboardTest
+portal-dependency-jars=vaadin.jar
 #change-log=
 #page-uri=
 #author=
 license=Proprietary
-portal-dependency-jars=\
-    vaadin.jar
