--- a/workflow_api/ivy.xml
+++ b/workflow_api/ivy.xml
@@ -49,8 +49,12 @@
   		<dependency org="org.apache.logging.log4j" name="log4j-core" rev="2.2" />
   		
   		<!-- qbic -->
-  		<dependency org="life.qbic.openbis" name="liferayandvaadinhelpers" rev="1.1.3-SNAPSHOT" />
-  		
-			
+  		<!-- dependency org="life.qbic.openbis" name="liferayandvaadinhelpers" rev="1.1.3-SNAPSHOT" /> -->
+  		 <dependency org="life.qbic" name="portal-utils-lib" rev="1.0.0" />
+  		 
+  		 <dependency org="commons-lang" name="commons-lang" rev="2.6" />
+  		 
+  		 <dependency org="life.qbic.knime" name="knime-config-lib" rev="20180720-1" />
+  			
 	</dependencies>
 </ivy-module>
